feat: add jwt support
